# codesentinel-ai

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  sitecustomize.py  streamlit_app.py
.github/workflows/: ci.yml
app/: streamlit_app.py
codesentinel/: __init__.py
docs/: ARCHITECTURE.md  DEPLOY_STREAMLIT.md  EVAL_REPORT.md  GITHUB_SETUP.md  PORTFOLIO.md  TECHNICAL_WRITEUP.md
evals/: cases.jsonl
examples/sample_repo/: README.md  app.py
src/codesentinel/: __init__.py  agent.py  analyzer.py  cli.py  config.py  evaluator.py  models.py  providers.py  renderer.py  scanner.py
tests/: test_analyzer.py  test_evaluator.py  test_renderer.py
