[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentinel-ai"
version = "0.1.0"
description = "Agentic code-review and evaluation workbench for AI-assisted software delivery."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nithin Reddy Sana" }]
license = { text = "MIT" }
keywords = ["ai-agents", "code-review", "llm-evals", "devtools", "software-engineering"]
dependencies = []

[project.scripts]
codesentinel = "codesentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
